--- a/actividades.html
+++ b/actividades.html
@@ -91,9 +91,26 @@
         </section>
     </main>
 
-    <footer class="main-footer">
-        <p><i class="fas fa-envelope"></i> csamanza@proton.me</p>
-        <p><i class="fas fa-map-marker-alt"></i> Calle Santa Teresa, 10</p>
+<footer class="main-footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-info">
+                    <h3>CSA MANZA</h3>
+                    <p>Centro Social Autogestionado de Manzanares el Real</p>
+                </div>
+                
+                <div class="footer-contact">
+                    <h4>Contacto</h4>
+                    <p><i class="fas fa-envelope"></i> csamanza@proton.me</p>
+                    <p><i class="fas fa-map-marker-alt"></i> CALLE SANTA TERESA 10, MANZANARES EL REAL</p>
+                </div>
+            </div>
+            
+            <div class="footer-bottom">
+                <p>&copy; <span id="current-year">2025</span> CSA MANZA.</p>
+                <p class="footer-note">Este sitio no usa cookies de rastreo</p>
+            </div>
+        </div>
     </footer>
 
     <script src="js/main.js"></script>
