--- a/actividades/recurrentes.html
+++ b/actividades/recurrentes.html
@@ -16,25 +16,26 @@
                 </div>
             </div>
 
-            <nav class="main-nav">
-                <ul class="nav-list">
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li class="dropdown">
-                        <a href="../asamblea.html" class="dropbtn">ASAMBLEA <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-content">
-                            <li><a href="../asamblea.html#quienes-somos">¿Quiénes somos?</a></li>
-                            <li><a href="../asamblea.html#organigrama">Organigrama</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="../actividades.html" class="dropbtn active">ACTIVIDADES <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-content">
-                            <li><a href="recurrentes.html" class="active">Recurrentes</a></li>
-                            <li><a href="puntuales.html">Puntuales</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
+<nav class="main-nav">
+    <ul class="nav-list">
+        <li><a href="index.html" class="active">INICIO</a></li>
+        <li><a href="programacion.html">PROGRAMACIÓN MENSUAL</a></li>
+        <li class="dropdown">
+            <a href="asamblea.html" class="dropbtn">ASAMBLEA <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-content">
+                <li><a href="asamblea.html#quienes-somos">¿Quiénes somos?</a></li>
+                <li><a href="asamblea.html#organigrama">Organigrama</a></li>
+            </ul>
+        </li>
+        <li class="dropdown">
+            <a href="actividades.html" class="dropbtn">ACTIVIDADES <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-content">
+                <li><a href="actividades/recurrentes.html">Recurrentes</a></li>
+                <li><a href="actividades/puntuales.html">Puntuales</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
             <button class="menu-toggle" aria-label="Abrir menú de navegación">
                 <i class="fas fa-bars"></i>
             </button>
