--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 <div class="view-all-container">
                     <a href="programacion.html" class="view-all-button">
-                        <i class="fas fa-calendar-alt"></i> VER TODA LA PROGRAMACIÓN
+                        <i class="fas fa-calendar-alt"></i> VER TODAS
                     </a>
                 </div>
                 
