--- a/asamblea.html
+++ b/asamblea.html
@@ -18,7 +18,7 @@
 
 <nav class="main-nav">
     <ul class="nav-list">
-        <li><a href="index.html">INICIO</a></li>
+        <li><a href="index.html" class="active">INICIO</a></li>
         <li><a href="programacion.html">PROGRAMACIÓN MENSUAL</a></li>
         <li class="dropdown">
             <a href="asamblea.html" class="dropbtn">ASAMBLEA <i class="fas fa-chevron-down"></i></a>
@@ -36,6 +36,7 @@
         </li>
     </ul>
 </nav>
+
             <button class="menu-toggle" aria-label="Abrir menú de navegación">
                 <i class="fas fa-bars"></i>
             </button>
