--- a/programacion.html
+++ b/programacion.html
@@ -53,9 +53,31 @@
 
         <section class="blog-section">
             <div class="container">
-                <h2 class="section-title">Programaciones por Mes</h2>
-                
+                <h2 class="section-title">Programaciones por Mes</h2>                
                 <div class="blog-grid">
+                    <article class="blog-card">
+                        <div class="blog-content">
+                            <div class="blog-date">ENERO 2026</div>
+                            <h3>Empieza el año en comunidad</h3>
+                            
+                            <div class="image-gallery">
+                                <div class="gallery-item">
+                                    <a href="img/novedades/programacion-enero-1.jpg" target="_blank" class="image-link">
+                                        <img src="img/novedades/programacion-diciembre-1.jpg" 
+                                             alt="Programación enero 2026 - parte 1">
+                                        <div class="zoom-icon"><i class="fas fa-search-plus"></i></div>
+                                    </a>
+                                </div>
+                                <div class="gallery-item">
+                                    <a href="img/novedades/programacion-enero-2.jpg" target="_blank" class="image-link">
+                                        <img src="img/novedades/programacion-enero-2.jpg" 
+                                             alt="Programación enero 2026 - parte 2">
+                                        <div class="zoom-icon"><i class="fas fa-search-plus"></i></div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
                     <!-- Diciembre 2025 -->
                     <article class="blog-card">
                         <div class="blog-content">
