--- a/index.html
+++ b/index.html
@@ -64,21 +64,20 @@
                             
                             <div class="image-gallery">
                                 <div class="gallery-item">
-                                    <a href="img/novedades/programacion-enero-1.jpg" target="_blank" class="image-link">
+                                    <a href="img/novedades/programacion-enero-1.jpeg" target="_blank" class="image-link">
                                         <img src="img/novedades/programacion-enero-1.jpeg" 
-                                             alt="Programación enero 2026 - parte 1">
-                                        <div class="zoom-icon"><i class="fas fa-search-plus"></i></div>
-                                    </a>
-                                </div>
-                                <div class="gallery-item">
-                                    <a href="img/novedades/programacion-enero-2.jpg" target="_blank" class="image-link">
-                                        <img src="img/novedades/programacion-enero-2.jpeg" 
-                                             alt="Programación enero 2026 - parte 2">
-                                        <div class="zoom-icon"><i class="fas fa-search-plus"></i></div>
-                                    </a>
-                                </div>
+                                        alt="Programación enero 2026 - parte 1">
+                                    <div class="zoom-icon"><i class="fas fa-search-plus"></i></div>
+                                </a>
                             </div>
-                        </div>
+                            <div class="gallery-item">
+                                <a href="img/novedades/programacion-enero-2.jpeg" target="_blank" class="image-link">
+                                    <img src="img/novedades/programacion-enero-2.jpeg" 
+                                        alt="Programación enero 2026 - parte 2">
+                                    <div class="zoom-icon"><i class="fas fa-search-plus"></i></div>
+                                </a>
+                            </div>
+                        </div>        
                     </article>
 
                     <!-- Programación Diciembre -->
